# algorithms_workshop

./: CMakeLists.txt  ChristofidesHeuristicTSP.cpp  ChristofidesHeuristicTSP.h  ConvexHull.cpp  ConvexHull.h  ConvexHullHeuristicTSP.cpp  ConvexHullHeuristicTSP.h  DSU.cpp  DSU.h  InsertionHeuristicTSP.h  MST.cpp  MSTTSP.cpp  MSTTSP.h  Makefile  NearestNeighborTSP.h  README.md  README.org  app.cpp  config.cpp  config.h  main  main.cpp  main.org
assets/: 2023-04-10-Note-19-54.xopp
src/: main.cpp
src/Algorithms/ConvexHull/: ConvexHull.cpp  ConvexHull.h
src/Algorithms/MinimumSpanningTree/: MST.cpp  MST.h
src/Algorithms/TravelSalesmanProblem/: ChristofidesHeuristicTSP.cpp  ConvexHullHeuristicTSP.cpp  InsertionHeuristicTSP.cpp  InsertionHeuristicTSP.h  MSTTSP.cpp  NearestNeighborTSP.cpp
src/ChemberleinRaylibUILib/: app.h  config.cpp  element.cpp  element.h  scene.cpp  scene.h
